# fpga_trading_accelerator

./: .gitignore  CMakeLists.txt  README.md
hw/rtl/: market_data_parser.sv  order_book_manager.vhd
sw/api/: trading_interface.cpp  trading_interface.hpp
sw/apps/: main.cpp
